Permanently removed the "flash" graphic, which flashed when photons were re-emitted by atmosphere.  It was previously commented out.
Removed unused code left over from aborted port of older tabs to Piccolo.
Fixed: Pressing selector buttons twice on the emission control panel would deslect the button.
Consolidated code for photon emitters between Molecules and Light and Photon Absorption.
Made the molecules able to vibrate after rotating without returning to their original positions.
Fixed an issue where bonds were incorrect when atoms were vertically aligned.
Added a different representation of the UV emitter with more of a "black light" look.
# 3.01.05 (47297) Dec 18, 2010
# 3.01.04 (47268) Dec 16, 2010
12/16/10 Deploying to dev as release candidate.
12/9/10 see #2598, deleted partial unused Piccolo port of a module and its control panel
# 3.01.03 (46760) Dec 2, 2010
12/2/10 Deploying to dev for review of some prototyped features in Molecules & Light
Molecules & Light: Made O3 break apart into O2 and O.  This is a prototype for testing breaking apart
Molecules & Light: Modified the color scheme for a more engaging look
Molecules & Light: Added all molecules to the control panel
Molecules & Light: Created the two-line molecule selector on the control panel.
Molecules & Light: Added the visual connector between the spectrum range and the selector button.
Molecules & Light: Make the lines from the ranges connect to the choice itself
Added CO, NO2, and O3 to the Molecules & Light sim.
> Fixed: Photons were disappearing before traveling out of view on the Photon Absorption tab.
Created the spectrum representation for the control panel in Molecules & Light
Added the control panel for controlling the photon emitter in Molecules & Light
Added the new photon emitter types for Molecules & Light (UV & Microwave)
# 3.01.02 (45790) Nov 7, 2010
> Fixed a bug that prevented photons from reflecting from ice
# 3.01.01 (45785) Nov 5, 2010