@@ -80,6 +80,8 @@ ControlPanel.BuildAtmosphere   =<html>Build<br>Atmosphere</html>
 ControlPanel.Molecules   =Molecules
 ControlPanel.Molecule   =Molecule
 
+ButtonNode.ReturnMolecule=Return Molecule
+
 # PhotonEmitterNode
 PhotonEmitterNode.Infrared =<html>Infrared<br>Photon</html>
 PhotonEmitterNode.Visible = <html>Visible<br>Photon</html>
