@@ -1,3 +1,4 @@
+Internationalized the Molecules & Light control panel and "Return Molecule" button.
 Permanently removed the "flash" graphic, which flashed when photons were re-emitted by atmosphere.  It was previously commented out.
 Removed unused code left over from aborted port of older tabs to Piccolo.
 Fixed: Pressing selector buttons twice on the emission control panel would deslect the button.
